--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -19,6 +19,11 @@
 .logo img{
     width: calc(100%-30%);
     object-fit: contain;
+    margin-top: 50px;
+    z-index: 101;
+    position: sticky;
+    top: 0;
+
 
 }
  .logo h5 {
