--- a/src/styles/Node.css
+++ b/src/styles/Node.css
@@ -13,7 +13,7 @@
   box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.08);
 }
 
-.edgebutton-foreignobject body {
+.edgebutton-foreignobject div {
   background: transparent;
   width: 40px;
   height: 40px;
@@ -21,4 +21,8 @@
   justify-content: center;
   align-items: center;
   min-height: 40px;
+}
+
+.fa-trash:hover {
+  color: red;
 }
