--- a/src/components/Chat/ChatContent/chatContent.css
+++ b/src/components/Chat/ChatContent/chatContent.css
@@ -90,7 +90,7 @@
   transform-origin: left;
 }
 .chat__item.other .chat__item__content {
-  background-color: #fff;
+  background-color: #f2f3f4;
   color: #000;
   border-radius: 10px 10px 10px 0;
   max-width: 50%;
