--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,3 @@
-/*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
-
 @font-face {
   font-family: Poppins-Regular;
   src: url("../fonts/poppins/Poppins-Regular.ttf");
@@ -21,9 +18,6 @@
   src: url("../fonts/poppins/Poppins-SemiBold.ttf");
 }
 
-/*//////////////////////////////////////////////////////////////////
-[ RESTYLE TAG ]*/
-
 * {
   margin: 0px;
   padding: 0px;
@@ -36,7 +30,6 @@ html {
   font-family: Poppins-Regular, sans-serif;
 }
 
-/*---------------------------------------------*/
 a {
   font-family: Poppins-Regular;
   font-size: 14px;
@@ -72,7 +65,6 @@ li {
   list-style-type: none;
 }
 
-/*---------------------------------------------*/
 input {
   outline: none;
   border: none;
@@ -140,7 +132,6 @@ textarea:-ms-input-placeholder {
   color: #adadad;
 }
 
-/*---------------------------------------------*/
 button {
   outline: none !important;
   border: none;
@@ -155,8 +146,6 @@ iframe {
   border: none !important;
 }
 
-/*//////////////////////////////////////////////////////////////////
-[ Utility ]*/
 .txt1 {
   font-family: Poppins-Regular;
   font-size: 13px;
@@ -171,7 +160,7 @@ iframe {
   line-height: 1.5;
 }
 
-[login]*/ .limiter {
+[login] * .limiter {
   width: 100%;
   margin: 0 auto;
 }
@@ -205,9 +194,6 @@ iframe {
   -ms-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
-/*------------------------------------------------------------------
-[ Form ]*/
-
 .login100-form {
   width: 100%;
 }
@@ -223,9 +209,6 @@ iframe {
 .login100-form-title i {
   font-size: 60px;
 }
-
-/*------------------------------------------------------------------
-[ Input ]*/
 
 .wrap-input100 {
   width: 100%;
@@ -247,7 +230,6 @@ iframe {
   padding: 0 5px;
 }
 
-/*---------------------------------------------*/
 .focus-input100 {
   position: absolute;
   display: block;
@@ -258,10 +240,6 @@ iframe {
   pointer-events: none;
 }
 
-/*---------------------------------------------*
-
-/*------------------------------------------------------------------
-[ Button ]*/
 .container-login100-form-btn {
   display: -webkit-box;
   display: -webkit-flex;
@@ -306,17 +284,11 @@ iframe {
   left: 0;
 }
 
-/*------------------------------------------------------------------
-[ Responsive ]*/
-
 @media (max-width: 576px) {
   .wrap-login100 {
     padding: 77px 15px 33px 15px;
   }
 }
-
-/*------------------------------------------------------------------
-[ Alert validate ]*/
 
 .validate-input {
   position: relative;
