--- a/src/styles/Node.css
+++ b/src/styles/Node.css
@@ -117,3 +117,23 @@
 .inputKeyword:hover .deleteCondition {
   display: inline;
 }
+
+/* INTENT */
+.actionTable {
+  display: inline;
+  background: red;
+  margin: 0px 5px;
+  padding: 4px;
+  border-radius: 4px;
+  width: 20px;
+  font-size: 15px;
+}
+.tableData {
+  margin: 15px 0px;
+  font-size: 17px;
+  font-family: sans-serif;
+}
+.btn-table {
+  margin-right: 5px;
+  min-width: 113px;
+}
