--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,11 @@
-.header {
-  width: 100%;
-  height: 80px;
-  line-height: 80px;
+
+.logo-nav {
+  display: flex;
+  align-items: center;
+}
+.logo-word {
+  font-weight: 650;
+  font-size: 25px;
 }
 .logo {
   text-align: center;
@@ -34,10 +38,10 @@
   text-decoration: none;
 }
 .menu a:hover {
-  color: #19a1d8;
+  color: #1673ff;
 }
 .active__menu {
-  color: #19a1d8 !important;
+  color: #1673ff !important;
 }
 .cart__icon i,
 .user i,
