--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -2,6 +2,7 @@
   background: #00235b !important;
   border: none !important;
   font-size: 15px !important;
+  margin-right: 15px;
 }
 .table-area {
   padding: 10px;
@@ -10,39 +11,6 @@
   background: white;
 }
 
-.filter-section {
-  background: #eaebf1;
-  width: 100%;
-  height: 44px;
-  border-radius: 10px;
-  align-items: center;
-  display: flex;
-  padding-left: 5px;
-  padding-right: 15px;
-  margin: 14px 0px 10px 0px;
-}
-.dateTime-picker {
-  cursor: pointer;
-  margin: 0px 10px 0px 10px;
-  font-size: 17px;
-  height: 80%;
-  display: flex;
-  align-items: center;
-  padding: 0px 5px 0px 5px;
-  border-radius: 7px;
-}
-.filterIcon {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  border-radius: 7px;
-}
-.dateTime-picker:hover {
-  background: #c8cbd1;
-}
-.filterIcon:hover {
-  background: #c8cbd1;
-}
 .vertical {
   border-left: 0.5px dotted black;
   margin-right: 10px;
@@ -82,8 +50,8 @@ tr:hover * {
   border: 0.1px solid #c9eeff;
 }
 .patternInputArea:hover {
-  background: #c9eeff;
-  border: 1px solid #0d6efd;
+  background: #ddf9fd;
+  border: 1px solid #52c8ff;
 }
 
 .patternInput {
