--- a/src/components/Chat/ChatContent/chatContent.css
+++ b/src/components/Chat/ChatContent/chatContent.css
@@ -25,8 +25,8 @@
   color: #000;
 }
 .content__body {
-  max-height: calc(100vh - calc(100vh / 2));
   overflow: auto;
+  height: 75vh !important;
 }
 .chat__item {
   display: flex;
@@ -111,6 +111,9 @@
   justify-content: space-between;
   padding: 10px;
   border-radius: 8px;
+}
+.sendNewMessage:hover {
+  border: 1px solid #52c8ff;
 }
 .sendNewMessage button {
   width: 36px;
