--- a/src/components/Show/css/ModalPattern.css
+++ b/src/components/Show/css/ModalPattern.css
@@ -83,3 +83,25 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+.modal-update-pattern .modal-content {
+  background-color: #f5f6fa;
+}
+.spanText {
+  border-bottom: 3px solid #e0b70d;
+  box-shadow: inset 0 -2px 0 #e0b70d;
+}
+.layout-input {
+  width: 100%;
+  height: 100%;
+}
+.background-highlight {
+  height: 100%;
+  width: 100%;
+  background: none;
+  margin-left: 10px;
+  position: relative;
+  top: -100%;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
