--- a/src/pages/css/Flow.css
+++ b/src/pages/css/Flow.css
@@ -85,7 +85,7 @@
   border-radius: 12px !important;
   height: 100%;
   padding: 2px 8px 8px 8px !important;
-  background: #f5f6fa !important;
+  background: #ffff !important;
 }
 .title-m {
   margin-bottom: 15px;
