--- a/src/components/Modal/css/ChatHistoryModal.css
+++ b/src/components/Modal/css/ChatHistoryModal.css
@@ -4,10 +4,20 @@
 }
 .chat-history-modal .modal-content {
   background: #f5f6fa !important;
+  min-height: 820px;
+  max-height: 820px;
+  /* overflow-y: hidden; */
+}
+.chat-history-modal .modal-content .modal-body {
+  overflow-y: hidden;
 }
 .session-list {
   border-radius: 10px;
   background: #ffff;
+  padding-bottom: 15px;
+  transition: width linear 0.2s;
+  max-height: 792px;
+  height: 792px;
 }
 .session-list:hover {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -19,7 +29,13 @@
   text-align: center;
   font-size: 20px;
   font-weight: 600;
-  margin-top: 10px;
+  margin-top: 10px !important;
+}
+.header-history-sub {
+  text-align: center;
+  font-size: 17px;
+  font-weight: 600;
+  margin-top: 10px !important;
 }
 .history-selected {
   background: #1e3150;
@@ -30,4 +46,25 @@
 }
 .history-selected:hover * {
   color: white !important;
+}
+.fullscreen {
+  display: inline;
+  border-radius: 5px;
+  background: white;
+  /* position: absolute;
+  left: 97%;
+  top: 3%; */
+  padding: 6px 7px;
+}
+.fullscreen:hover {
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.set-height {
+  max-height: 792px !important;
+  height: 792px !important;
+}
+.list-entity {
+  padding: 0px !important;
+  border-left: 1px solid #eaebf1;
 }
