--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -89,3 +89,22 @@ tr:hover * {
 .icon-import {
   margin-right: 10px;
 }
+.ant-pagination-item {
+  display: inline-grid !important;
+  align-items: center !important;
+  text-align: center !important;
+}
+.ant-pagination-item-link {
+  text-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+}
+.nofollow {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+.loadding {
+  width: 20px !important;
+  font-size: 10px !important;
+  height: 20px !important;
+}
