--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -15,6 +15,9 @@
   border-left: 0.5px dotted black;
   margin-right: 10px;
 }
+.col-entity {
+  min-width: 20% !important;
+}
 
 .action-row * {
   margin-left: 6px;
