--- a/src/components/Chat/ChatContent/chatContent.css
+++ b/src/components/Chat/ChatContent/chatContent.css
@@ -2,6 +2,10 @@
   flex-grow: 1;
   padding: 10px 10px;
   max-width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .content__header {
   padding-bottom: 15px;
@@ -25,7 +29,7 @@
 }
 .content__body {
   overflow: auto;
-  height: 75vh !important;
+  height: 100%;
 }
 .chat__item {
   display: flex;
@@ -163,7 +167,6 @@
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
-  position: absolute;
   top: 80%;
 }
 
