--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -38,9 +38,14 @@
 .header-Table {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .total-script {
   font-size: 17px;
   font-weight: 500;
+  margin-right: 10px;
+}
+.gpt-generate-section {
+  display: flex;
+  align-content: center;
 }
