--- a/src/styles/Node.css
+++ b/src/styles/Node.css
@@ -51,10 +51,13 @@
   background: #f2f3f4;
   padding: 10px;
   border: 0.5px solid #ccedfc;
+  max-height: 100px;
+  overflow: hidden;
 }
 #message:hover {
   background: #ebf5fb;
   border: 0.5px solid #3498db;
+  max-height: 100%;
 }
 #intent {
   border: 0px solid #ec7063;
