fix bug notifications

--- a/src/components/Message/messagelist.css
+++ b/src/components/Message/messagelist.css
@@ -14,7 +14,7 @@
 
   }
   
-  .message {
+  .messageRecei {
     background-color: #f5f6fa;
     border-radius: 15px 15px 0px 15px;
     padding: 8px;
